更新关系链查找
